--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
            <div class="intro_inner">
             <h1 class="intro_tittle">Alex Pishchulin</h1> 
             <h2 class="intro_text">Junior Front End Developer</h2>
-            
+            <div class="floating-button">learn more</a>
             </div>
          </div>
           
