feat: add footer

--- a/index.html
+++ b/index.html
@@ -34,21 +34,45 @@
             </div>
           </div>
       </div>
-      
  <section class="section">
   <div class="main_background"></div>
    <div class="container">
     <div class="section_header">
       <h3 class="section_suptittle">About me:</h3>
-      <p class="section_text">Hi, my name is Alex and I am 23 years old. I live in the city of Saint Petersburg</p>
       <div class="myphoto"><img src="img/me.png" alt="my photo" style="width:300px;"></div>
+      <p class="section_text">Hi, my name is Alex and I am 23 years old. I live in the city of Saint Petersburg.
+        <br>
+        I want to become a programming professional!
+      </p>
+     
+      <div class="section_MySkills">
+        <h3 class="section_description">MySkills:</h3>
+        <ul class="section_skill">
+          <li>Html</li>
+          <li>CSS</li>
+          <li>JS</li>
+          <li>English: A2</li>
+        </ul>
+      </div>
+      <div class="sectioin_Work">
+        <h3 class="section_description">Examples of my Code:</h3>
+        <div class="examples_code"><img src="img/example.img.png" alt="my photo" style="width:500px;"></div>
+
+      </div>
   </div>
     </div>
    
   </section>
-
-
-  
-
+  <footer class="footer">
+    <div class="links">
+      <a class="link_logo-rss" href="https://rs.school/js/">
+        <img class="logo-rss" src="img/logo.jpg" alt="rsschool.img" width="100">
+      </a>
+      <p class="create_data">2021©</p>
+      <a class="link_logo-git" href="https://github.com/ckott10">
+        <img class="logo-git" src="img/git_logo.svg" alt="rsschool.img" width="55">
+      </a>
+    </div>
+  </footer>
   </body>
 </html>
