fix header info

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
                 
                 <nav class="nav">
                 <ul>
-                <li class="nav_link" href="#">About</li>
-                <li class="nav_link" href="#">MySkills</li>
-                <li class="nav_link" href="#">Work</li>
-                <li class="nav_link" href='#'>Contact</li>
+                <li class="nav_link" href="#">MyNumber:+7 952 378 1799</li>
+                <li class="nav_link">
+                  <a class="link_contact" href="https://vk.com/sashko10">VK</a></li>
+                <li class="nav_link">
+                  <a class="link_contact" href="https://github.com/ckott10">Github</a></li>
               </ul>
             </nav>
             </div>
@@ -40,7 +41,7 @@
     <div class="section_header">
       <h3 class="section_suptittle">About me:</h3>
       <div class="myphoto"><img src="img/me.png" alt="my photo" style="width:300px;"></div>
-      <p class="section_text">Hi, my name is Alex and I am 23 years old. I live in the city of Saint Petersburg.
+      <p class="section_text">Hi, my name is Alex and I am 23 years old. I live in the city of Saint Petersburg.Have University degree (2016-2020) SPBGLTU
         <br>
         I want to become a programming professional!
       </p>
