--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
            <div class="intro_inner">
             <h1 class="intro_tittle">Alex Pishchulin</h1> 
             <h2 class="intro_text">Junior Front End Developer</h2>
-            <div class="floating-button">learn more</a>
+            <a class="floating-button" href="#button">learn more</a>
             </div>
           </div>
       </div>
- <section class="section">
+ <section class="section" id='button'>
   <div class="main_background"></div>
    <div class="container">
     <div class="section_header">
