--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
     <div class="section_header">
       <h3 class="section_suptittle">About me:</h3>
       <div class="myphoto"><img src="img/me.png" alt="my photo" style="width:300px;"></div>
-      <p class="section_text">Hi, my name is Alex and I am 23 years old. I live in the city of Saint Petersburg.Have University degree (2016-2020) SPBGLTU
+      <h4 class="section_text">Hi, my name is Alex and I am 23 years old. I live in the city of Saint Petersburg.Have University degree (2016-2020) SPBGLTU</h4>
         <br>
         I want to become a programming professional!
       </p>
-     
+     0
       <div class="section_MySkills">
-        <h3 class="section_description">MySkills:</h3>
+        <h5 class="section_description">MySkills:</h5>
         <ul class="section_skill">
           <li>Html</li>
           <li>CSS</li>
