fix: validation file

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 
                 <nav class="nav">
                 <ul>
-                <li class="nav_link" href="#">MyNumber:+7 952 378 1799</li>
+                <li class="nav_link">MyNumber:+7 952 378 1799</li>
                 <li class="nav_link">
                   <a class="link_contact" href="https://vk.com/sashko10">VK</a></li>
                 <li class="nav_link">
@@ -43,9 +43,7 @@
       <div class="myphoto"><img src="img/me.png" alt="my photo" style="width:300px;"></div>
       <h4 class="section_text">Hi, my name is Alex and I am 23 years old. I live in the city of Saint Petersburg.Have University degree (2016-2020) SPBGLTU</h4>
         <br>
-        I want to become a programming professional!
-      </p>
-     0
+        <p>I want to become a programming professional!</p>
       <div class="section_MySkills">
         <h5 class="section_description">MySkills:</h5>
         <ul class="section_skill">
@@ -70,7 +68,7 @@
         <img class="logo-rss" src="img/logo.jpg" alt="rsschool.img" width="100">
       </a>
       <a class="link_telegram" href="https://t.me/Ckott">
-        <img class="logo_teleram" src="img/telegram-1867901-1580057.png"alt="teleram.png" width="55">
+        <img class="logo_teleram" src="img/telegram-1867901-1580057.png" alt="teleram.png" width="55">
       </a>
       <p class="create_data">2021©</p>
       <a class="link_logo-git" href="https://github.com/ckott10">
