--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             </div>
           </div>
       </div>
+<main>  
  <section class="section" id='button'>
   <div class="main_background"></div>
    <div class="container">
@@ -62,6 +63,7 @@
     </div>
    
   </section>
+  </main> 
   <footer class="footer">
     <div class="links">
       <a class="link_logo-rss" href="https://rs.school/js/">
